2005-01-10  Hans Petter Jansson  <hpj@novell.com>

	* addressbook/e-book-backend-gal.c (gal_connect): Store the account for
	future reference.
	(ldap_op_finished): Add robustness check.
	(get_contact_handler): Ditto.
	(get_contact): Implement offline case.
	(contact_list_handler): Add robustness check.
	(get_contact_list): Implement offline case.
	(poll_ldap): Set poll_timeout to -1 if we disconnect the poll.
	(ldap_search_handler): Add robustness check.
	(start_book_view): Implement offline case.
	(generate_cache_handler): Implement.
	(generate_cache_dtor): Implement.
	(generate_cache): Implement.
	(ldap_cancel_op): Add robustness check.
	(set_mode): Implement online/offline switching.
	(get_required_fields): Silence a warning.
	(load_source): Implement offline case. Initialize cache.
	(dispose): Free cache.

2005-01-08  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-tasks.c : Return error messages
	for operations not supported in offline.
	* calendar/e-cal-backend-exchange.c : Similar

2005-01-07  Sarfraaz Ahmed <asarfraaz@novell.com>

	* camel/camel-exchange-folder.c : Now implements the CamelFolderDisco
	class methods. Needed for making folders available when offline.
	* camel/camel-exchange-folder.h : Similar
	* camel/camel-exchange-store.c : CamelExchangeStore is now derived
	from CamelDiscoStoreClass. Implemented the virtual functions for this.
	* camel/camel-exchange-store.h : Similar

2005-01-07  Sarfraaz Ahmed <asarfraaz@novell.com>

	Patch submitted by JP Rosevear for SelectNames fix.
	* configure.in : Now check for libedataserverui as well.
	* lib/Makefile.am : Removed the IDL files.
	* shell/Makefile.am : Similar
	* lib/e2k-user-dialog.c : Replaced the CORBA methods with the 
	e-name-selector methods.
	* shell/e-folder-misc-dialogs.c : Similar

2005-01-05  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c : Enabled offline support
	* addressbook/e-book-backend-gal.c : Similar